db-services.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project-plato
  name: db1
spec:
  selector:
    app: db
    type: db1
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  namespace: project-plato
  name: db2
spec:
  selector:
    app: db
    type: db2
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
